# court-auction-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: operations.md
docs/work-log/: 2026-05-20-ai-agent-bootstrap.md  2026-05-21-investment-risk-prompt.md  2026-05-21-structured-analysis-rerun.md
src/court_auction_ai_agent/: cli.py  config.py  crawler_source.py  db.py  enrichment.py  models.py  worker.py
systemd/: court-auction-ai-agent.service
tests/: test_ai_agent.py
